--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
 thop>=0.1.1  # FLOPs computation
-torch
+-f https://data.pyg.org/whl/torch-1.13.0+cpu.html
+torch-scatter
 torchvision>=0.9.0
 tqdm>=4.64.0
 ultralytics>=8.0.147
